Fixed spacing issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 * {
 	margin:  6px;
 	padding:  4px;
+	margin-left: 12px;
 	box-sizing: border-box;
 }
 
@@ -30,9 +31,8 @@ h1 {
   margin-bottom: 10px;
 }
 
-h2 {
-	margin-bottom: 10px;
-	margin-top: 10px;
+section {
+  margin-top: 14px;
 }
 
 .cdesc {
